[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Description of your project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
streamlit = "0.89.0"
pandas = "1.3.3"
pytz = "2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
